new proj/src/objects/GE_HQ_SUBSCR_SYSTEMS__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscribed Systems</relationshipLabel>
        <relationshipName>Subscribed_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier1__c</fullName>
        <label>Business - Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>OIL AND GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier2__c</fullName>
        <label>Business - Tier 2</label>
        <picklist>
            <controllingField>GE_HQ_Business_Tier1__c</controllingField>
            <picklistValues>
                <fullName>O&amp;G Drilling &amp; Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G Measurement &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G Subsea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier3__c</fullName>
        <label>Business - Tier 3</label>
        <picklist>
            <picklistValues>
                <fullName>O&amp;G M&amp;C DRESSER CORPORATE HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G M&amp;C DRESSER FLOW TECH &amp; INFRASTRUCTURE SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G PII HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G SERVICE HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G SS CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G D&amp;S CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G M&amp;C DRESSER WAYNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G HQ Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G M&amp;C Measurement &amp; Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G SS Wellstream</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_DUNS_Number__c</formula>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID_Fm__c</fullName>
        <description>Stores the combination text of Duns No,Tier 1, Tier 2 and Subscribed System Name to avoid duplicity</description>
        <formula>GE_HQ_DUNS_Number__c +&apos;-&apos;+TEXT(GE_HQ_Business_Tier1__c) +&apos;-&apos;+ TEXT(GE_HQ_Business_Tier2__c) +&apos;-&apos;+ TEXT(GE_HQ_Subscr_Sys_Name__c)</formula>
        <label>External ID Fm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy_Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_ORG_ID__c</fullName>
        <label>Org ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_PUBLISHED_DATE__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_REQUEST_STATUS__c</fullName>
        <label>Legacy Request Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Req_Status_Fm__c</fullName>
        <formula>IF( GE_HQ_REQUEST_STATUS__c =&apos;A&apos;, &apos;Active&apos;, IF(GE_HQ_REQUEST_STATUS__c =&apos;I&apos;, &apos;Inactive&apos;,&apos;None&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Subscr_Sys_Name__c</fullName>
        <label>Subscribed System Name</label>
        <picklist>
            <picklistValues>
                <fullName>USVGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VG_COINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VG Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently_Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEP (HOUSTON)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS (HOUSTON)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_ISOCIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARLIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMF_SNISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS_VARIABLE_CHANNELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSDOM (UNIT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS_PDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS_PDB_temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATAFLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_1_STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_BANN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_MDSCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_ORACLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_QA_SINGAPORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_QAD_CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_QAD_INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_SYTELINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE_ZEAL_INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR_CIMJIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR_ERPLX_BRADFORD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Default__c</fullName>
        <label>GE_OG_Default</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_LEGACY_CUST_NUM__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Status_val__c</fullName>
        <label>Status val</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Subscribed System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_LEGACY_CUST_NUM__c</columns>
        <columns>GE_HQ_Business_Tier1__c</columns>
        <columns>GE_HQ_Business_Tier2__c</columns>
        <columns>GE_HQ_Business_Unit__c</columns>
        <columns>GE_HQ_Subscr_Sys_Name__c</columns>
        <columns>GE_HQ_ORG_ID__c</columns>
        <columns>GE_HQ_PUBLISHED_DATE__c</columns>
        <columns>GE_HQ_Req_Status_Fm__c</columns>
        <columns>GE_HQ_DUNS_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OG_Subscribed_Systems</fullName>
        <columns>NAME</columns>
        <columns>GE_OG_LEGACY_CUST_NUM__c</columns>
        <columns>GE_HQ_Business_Tier1__c</columns>
        <columns>GE_HQ_Business_Tier2__c</columns>
        <columns>GE_HQ_Business_Unit__c</columns>
        <columns>GE_HQ_Subscr_Sys_Name__c</columns>
        <columns>GE_HQ_Legacy_Id__c</columns>
        <columns>GE_HQ_REQUEST_STATUS__c</columns>
        <columns>GE_HQ_ORG_ID__c</columns>
        <columns>GE_HQ_Req_Status_Fm__c</columns>
        <columns>GE_HQ_SFDC_LEGACY_ID__c</columns>
        <columns>GE_HQ_DUNS_Number__c</columns>
        <columns>GE_HQ_External_ID__c</columns>
        <columns>GE_HQ_External_ID_Fm__c</columns>
        <columns>GE_HQ_PUBLISHED_DATE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Business_Tier1__c</field>
            <operation>equals</operation>
            <value>OIL AND GAS</value>
        </filters>
        <label>O&amp;G Subscribed Systems</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SS-{000000000}</displayFormat>
        <label>Subscribed System ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>